after complete my first dances with Apache Derby