@@ -2,6 +2,7 @@ package com.chapter16;
 
 import java.sql.DriverManager;
 import java.sql.Statement;
+import java.lang.reflect.InvocationTargetException;
 import java.sql.Connection;
 import java.sql.SQLException;
 
@@ -9,34 +10,46 @@ class CreateTable {
 	
 	public static void main(String[] args) {
 		final String DRIVER = "org.apache.derby.jdbc.EmbeddedDriver";
-		final String CONNECTION = "jdbc:derby:AccountDatabase;
-		                           create=true";
+		final String CONNECTION = "jdbc:derby:MeizinDatabase;create=true";
 		try {
-			Class.forName(DRIVER).newInstance();
-		 } catch (InstantionException e) {
+			//Class<?> driverClass = Class.forName(DRIVER);
+			//Object driverInstance = driverClass.getDeclaredConstructor().newInstance();
+			Class.forName(DRIVER).getDeclaredConstructor().newInstance();
+		 } catch (InstantiationException | IllegalAccessException | ClassNotFoundException | NoSuchMethodException e) {
 			 e.printStackTrace();
-		 } catch (IllegalAccessException e) {
+		 } catch (InvocationTargetException e) {
 			 e.printStackTrace();
-		 } catch (ClassNotFoundException e) {
-			 e.printStackTrace();
-		 }
+		 } 
 		
 		try (Connection connection = 
-				DriveManager.getConnection(CONNECTION); 
+				DriverManager.getConnection(CONNECTION); 
 				Statement statement = connection.createStatement()) {
-			statement.executeUpdate(
+			/*
+			   statement.executeUpdate(
 			     "create table ACCOUNTS                       "
 			   + "  (NAME VARCHAR(32) NOT NULL PRIMARY KEY,   "
 			   + "   ADDRESS VARCHAR(32),                     "
 			   + "   BALANCE FLOAT)                       ");
+			
 			statement.executeUpdate(
 				 "insert into ACCOUNTS values                 "
-			   + "  ('Барри Берд', 'улица Киберов, 234', 24.04)");
+			   + "  ('Барри Берд', 'улица Киберов, 230', 24.04)");
 			
 			statement.executeUpdate(
 			     "insert into ACCOUNTS values                 "
-			   + "  ('Дмитрий Мэйдзин', 'улица Нарочанская, 37', 21.09)");
+			   + "  ('Дмитрий Мэйдзин', 'улица Нарочанская, 30', 21.09)");
+			   
+			statement.executeUpdate(
+					 "insert into ACCOUNTS values                 "
+				   + "  ('Дитер Бохлен', 'улица Киберштрассе, 230', 24.04)");
 			
+			statement.executeUpdate(
+					 "insert into ACCOUNTS values                 "
+				   + "  ('Томас Андерс', 'улица Киберштрассе, 230', 24.04)");
+			*/
+			statement.executeUpdate(
+					 "insert into ACCOUNTS values                 "
+				   + "  ('C.C. Catch', 'улица Киберштрассе, 237', 24.04)");
 		} catch (SQLException e) {
 			e.printStackTrace();
 		}
